[project]
name = "map-cov-bis"
version = "0.1.0"
description = "UK Crime Data Analysis with Bisection Strategy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.9.0",
    "polars>=1.0.0",
    "altair>=5.0.0",
    "httpx>=0.27.0",
]

[tool.marimo.runtime]
output_max_bytes = 39_000_000
